--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <nav class="nav-container">
+        <div class="nav-logo">
+            <img class="nav-img" src="./images/Frame.png" alt="">
+            <h2 class="nav-title">Gamer</h2>
+        </div>
+        <div class="nav-items">
+            <ul>
+                <li>About Us</li>
+                <li>Developers</li>
+                <div class="follow-list">
+                    <li>Follow Us On</li>
+                    <img class="youtube-logo" src="./images/youtube.png" alt="">
+                    <img class="tiktok-logo" src="./images/tik-tok.png" alt="">
+                </div>   
+            </ul>
+        </div>
+    </nav>
+    <!-- banner -->
+    <div class="banner-container">
+        <div class="banner-title">
+            <h2>Play Like The</h2>
+            <h1>G.O.A.T.</h1>
+            <div class="banner-list">
+                <ul>
+                    <li>1-Click instant play</li>
+                    <li>No Download</li>
+                    <li>1000s of supported online games</li>
+                </ul>
+                <div>
+                    <button class="sign-btn">Sign In</button> <button class="rogue-btn">Go Rogue</button>
+                </div>
+            </div>
+        </div>
+        <div class="banner-img">
+            <img src="./images/Group 18.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
