added main container

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
     <nav class="nav-container">
         <div class="nav-logo">
             <img class="nav-img" src="./images/Frame.png" alt="">
@@ -27,8 +28,8 @@
     <!-- banner -->
     <div class="banner-container">
         <div class="banner-title">
-            <h2>Play Like The</h2>
-            <h1>G.O.A.T.</h1>
+            <h1>Play Like The <br> <span class="primary-color">G.O.A.T.</span> </h1>
+            
             <div class="banner-list">
                 <ul>
                     <li>1-Click instant play</li>
@@ -44,5 +45,19 @@
             <img src="./images/Group 18.png" alt="">
         </div>
     </div>
+</header>
+<main>
+    <div class="gamer-container">
+        <div class="gamer-img">
+            <img src="./images/pngwing 4.png" alt="">
+        </div>
+        <div class="gamer-title">
+            <h1 class="primary-color">We are gamer</h1>
+            <p>An international digital games and entertainment<br>company. We develop, publish and distribute multiplayer<br>mobile games. We reach over 400 million players each<br>month and our audience keeps growing.</p>
+            <button class="know-more">know more</button>
+
+        </div>
+    </div>
+</main>
 </body>
 </html>
