added play instantly

--- a/index.html
+++ b/index.html
@@ -55,7 +55,47 @@
             <h1 class="primary-color">We are gamer</h1>
             <p>An international digital games and entertainment<br>company. We develop, publish and distribute multiplayer<br>mobile games. We reach over 400 million players each<br>month and our audience keeps growing.</p>
             <button class="know-more">know more</button>
-
+            <p>Our purpose... <br>
+            <b class="our-purpose">“unleash the gamer in everyone”</b> </p>
+        </div>
+    </div>
+    <div class="online-games-container">
+        <div class="online-games-title">
+            <h1>Online Games <span class="primary-color">Funny Videos</span></h1>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
+        <div class="online-games">
+           <div>
+            <img src="./images/Rectangle 4.png" alt="">
+            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div> 
+           <div>
+            <img src="./images/Rectangle 5.png" alt="">
+            <p>Did you score? #unblockedgames #school</p>
+        </div> 
+           <div>
+            <img src="./images/Rectangle 6.png" alt="">
+            <p>Breaking game records like OG</p>
+        </div>  
+           <div>
+            <img src="./images/Rectangle 7.png" alt="">
+            <p>Busted gaming on school laptop, but you are still lit.</p>
+        </div> 
+        </div>
+    </div>
+    <div class="play-instantly">
+        <div class="play-instantly-title">
+            <h1> <span class="primary-color">Play Instantly,</span><br>
+                No Downloads <br>
+                No Installs.</h1>
+                <p>Play games online for free without<br>downloading. Just click the Play button<br>and play instantly in your browser.</p>
+        </div>
+        <div class="play-instantly-img">
+            <img src="./images/Rectangle 55.png" alt="">
+            <div class="play-instantly-img-2">
+                <img src="./images/Rectangle 66.png" alt="">
+            </div>
+            
         </div>
     </div>
 </main>
